@@ -8,6 +8,13 @@
     <artifactId>EmbyPinyin</artifactId>
     <version>2.0.13</version>
 
+    <organization>
+        <name>wushuo894</name>
+    </organization>
+
+    <inceptionYear>2025</inceptionYear>
+    <description>Emby 支持拼音首字母排序</description>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -92,9 +99,24 @@
                             <stayAlive>false</stayAlive>
                             <restartOnCrash>false</restartOnCrash>
                             <jre>
-                                <path>jre/bin;%JAVA_HOME%;%PATH%</path>
+                                <path>jre/bin;%JAVA_HOME%/bin;%PATH%</path>
                                 <minVersion>17</minVersion>
+                                <opts>
+                                    <opt>-Xms60m -Xmx512m -Xss256k</opt>
+                                    <opt>--enable-native-access=ALL-UNNAMED</opt>
+                                    <opt>-XX:+UseCompactObjectHeaders</opt>
+                                    <opt>-XX:+IgnoreUnrecognizedVMOptions</opt>
+                                    <opt>--add-opens=java.base/java.net=ALL-UNNAMED</opt>
+                                    <opt>--add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED</opt>
+                                </opts>
                             </jre>
+                            <versionInfo>
+                                <copyright>Copyright (C) 2024-2025</copyright>
+                                <productName>${project.artifactId}</productName>
+                                <internalName>${project.artifactId}</internalName>
+                                <originalFilename>emby-pinyin-launcher.exe</originalFilename>
+                                <language>SIMPLIFIED_CHINESE</language>
+                            </versionInfo>
                         </configuration>
                     </execution>
                 </executions>
